[project]
name = "python-esiclient"
version = "1.0.0"
description = "ESI client"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Environment :: Console",
    "Environment :: OpenStack",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]
dependencies = [
    "ansible-runner>=1.4.4",
    "babel>=2.3.4,!=2.4.0",
    "esisdk>=0.5.0",
    "metalsmith>=2.0.0",
    "mock>=5.1.0",
    "openstacksdk<1.3.0",
    "osc-lib>=1.8.0",
    "oslo-utils>=4.5.0",
    "passlib>=1.7.0",
    "pbr>=2.0.0,!=2.1.0",
    "psutil>=3.2.2",
    "python-ironicclient>=2.3.0,!=2.5.2,!=2.7.1,!=3.0.0",
    "python-novaclient==17.4.0",
    "python-openstackclient>=5.2.0",
    "setuptools>=75.3.0",
    "simplejson>=3.5.1",
    "six>=1.10.0",
    "websocket-client>=0.44.0",
]

[project.entry-points."openstack.cli.extension"]
esiclient = "esiclient.plugin"

[project.entry-points."openstack.esiclient.v1"]
esi_mdc_baremetal_node_list = "esiclient.v1.mdc.mdc_node_baremetal:MDCBaremetalNodeList"
esi_node_network_attach = "esiclient.v1.node_network:Attach"
esi_node_network_detach = "esiclient.v1.node_network:Detach"
esi_node_network_list = "esiclient.v1.node_network:List"
esi_node_volume_attach = "esiclient.v1.node_volume:Attach"
esi_cluster_list = "esiclient.v1.cluster.cluster:List"
esi_cluster_orchestrate = "esiclient.v1.cluster.cluster:Orchestrate"
esi_cluster_undeploy = "esiclient.v1.cluster.cluster:Undeploy"
esi_openshift_orchestrate = "esiclient.v1.cluster.openshift:Orchestrate"
esi_openshift_undeploy = "esiclient.v1.cluster.openshift:Undeploy"
esi_switch_vlan_list = "esiclient.v1.switch:ListVLAN"
esi_switch_port_list = "esiclient.v1.switch:ListSwitchPort"
esi_switch_list = "esiclient.v1.switch:List"
esi_switch_port_disable_access = "esiclient.v1.switch:DisableAccessPort"
esi_switch_port_enable_access = "esiclient.v1.switch:EnableAccessPort"
esi_switch_port_enable_trunk = "esiclient.v1.switch:EnableTrunkPort"
esi_switch_trunk_add_vlan = "esiclient.v1.switch:AddTrunkVLAN"
esi_switch_trunk_remove_vlan = "esiclient.v1.switch:RemoveTrunkVLAN"
esi_switch_port_disable_trunk = "esiclient.v1.switch:DisableTrunkPort"
esi_trunk_create = "esiclient.v1.trunk:Create"
esi_trunk_delete = "esiclient.v1.trunk:Delete"
esi_trunk_list = "esiclient.v1.trunk:List"
esi_trunk_add_network = "esiclient.v1.trunk:AddNetwork"
esi_trunk_remove_network = "esiclient.v1.trunk:RemoveNetwork"
esi_node_console_connect = "esiclient.v1.node_console:NodeConsoleConnect"

[project.optional-dependencies]
test = [
    "coverage>=4.0,!=4.4",
    "ddt>=1.7.2",
    "docutils>=0.11",
    "fixtures>=3.0.0",
    "hacking>=3.0.1,<3.1.0",
    "metalsmith>=2.3.0",
    "munch>=3.0.0",
    "pytest>=4.6.3",
    "requests-mock>=1.2.0",
    "stestr>=2.0.0",
    "tempest>=42.0.0",
    "testscenarios>=0.4",
    "testtools>=2.2.0",
]
